Added formspree form

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section id="signup">
                 <h2>Get Updates</h2>
                 <p>Sign up to receive updates about new projects and articles.</p>
-                <form id="signup-form" class="signup-form" action="https://formspree.io/f/YOUR_UNIQUE_ID" method="post">
+                <form id="signup-form" class="signup-form" action="https://formspree.io/f/mqadvwvo" method="post">
                     <input type="email" name="email" placeholder="your.email@example.com" required>
                     <button type="submit">Sign Up</button>
                 </form>
