--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Project Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
@@ -31,9 +33,24 @@
             <section id="projects">
                 <h2>Project Directory</h2>
                 <ul>
-                    <li>Adventure Books - <a href="https://thecorcoran.github.io/adventurebooks/" target="_blank" rel="noopener noreferrer">Live Demo</a> | <a href="https://github.com/thecorcoran/adventurebooks" target="_blank" rel="noopener noreferrer">GitHub Repo</a></li>
-                    <li><a href="./project-02/">Project Two</a></li>
-                    <li><a href="./project-03/">Project Three</a></li>
+                    <li>
+                        <div class="project-card">
+                            <h3>Adventure Books</h3>
+                            <p>An interactive, text-based adventure game built with HTML, CSS, and JavaScript.</p>
+                            <div class="project-links">
+                                <a href="https://thecorcoran.github.io/adventurebooks/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i> Live Demo</a> | <a href="https://github.com/thecorcoran/adventurebooks" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> GitHub Repo</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="project-card">
+                            <h3>GreatBooks</h3>
+                            <p>A curated list of influential books, presented in a clean, readable interface.</p>
+                            <div class="project-links">
+                                <a href="https://thecorcoran.github.io/GreatBooks/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i> Live Demo</a> | <a href="https://github.com/thecorcoran/GreatBooks" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> GitHub Repo</a>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </section>
 
@@ -60,6 +77,7 @@
         const themeToggle = document.getElementById('theme-toggle');
         const body = document.body;
         const signupForm = document.getElementById('signup-form');
+        const backToTopButton = document.getElementById('back-to-top-btn');
 
         // Function to set the theme
         function setTheme(theme) {
@@ -123,7 +141,30 @@
         }
 
         signupForm.addEventListener("submit", handleFormSubmit);
+
+        // --- Back to Top Button Logic ---
+
+        // Show the button when the user scrolls down 200px from the top
+        window.onscroll = function() {
+            if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+                backToTopButton.style.display = "block";
+            } else {
+                backToTopButton.style.display = "none";
+            }
+        };
+
+        // When the user clicks on the button, scroll to the top of the document smoothly
+        backToTopButton.addEventListener('click', () => {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        });
+
     </script>
+
+    <!-- Back to Top Button -->
+    <button id="back-to-top-btn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
 
 </body>
 </html>
