Add MiniBook project to portfolio

--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
                             </div>
                         </div>
                     </li>
+                    <li>
+                        <div class="project-card">
+                            <h3>MiniBook</h3>
+                            <p>A simple, responsive e-reader interface for displaying book content.</p>
+                            <div class="project-links">
+                                <a href="https://github.com/thecorcoran/MiniBook.git" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> GitHub Repo</a>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </section>
 
