Refactor: Update theme to Pacific Northwest style, move signup, and add comments link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project Portfolio</title>
+    <title>Learning Folks</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -63,17 +63,18 @@
                 </ul>
             </section>
 
-            <hr>
-
             <section id="signup">
                 <h2>Get Updates</h2>
                 <p>Sign up to receive updates about new projects and articles.</p>
+                <p>Have comments on a project? <a href="./comments.html">Leave your feedback here!</a></p>
                 <form id="signup-form" class="signup-form" action="https://formspree.io/f/mqadvwvo" method="post">
                     <input type="email" name="email" placeholder="your.email@example.com" required>
                     <button type="submit">Sign Up</button>
                 </form>
                 <p id="form-status"></p>
             </section>
+
+            <hr>
         </main>
 
         <footer>
