Feature: Add comments.html and MiniBook live demo link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <h3>MiniBook</h3>
                             <p>A simple, responsive e-reader interface for displaying book content.</p>
                             <div class="project-links">
-                                <a href="https://github.com/thecorcoran/MiniBook.git" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> GitHub Repo</a>
+                                <a href="https://thecorcoran.github.io/MiniBook/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i> Live Demo</a> | <a href="https://github.com/thecorcoran/MiniBook.git" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> GitHub Repo</a>
                             </div>
                         </div>
                     </li>
