Feature: Add OnTheFrig project to portfolio

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
                             </div>
                         </div>
                     </li>
+                    <li>
+                        <div class="project-card">
+                            <h3>OnTheFrig</h3>
+                            <p>A web application to manage your refrigerator contents and reduce food waste.</p>
+                            <div class="project-links">
+                                <a href="https://thecorcoran.github.io/OnTheFrig/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i> Live Demo</a> | <a href="https://github.com/thecorcoran/OnTheFrig/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> GitHub Repo</a>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </section>
 
