Fix: Update live demo links to point to GitHub repos for projects without GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <h3>GreatBooks</h3>
                             <p>A curated list of influential books, presented in a clean, readable interface.</p>
                             <div class="project-links">
-                                <a href="https://thecorcoran.github.io/GreatBooks/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i> Live Demo</a> | <a href="https://github.com/thecorcoran/GreatBooks" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> GitHub Repo</a>
+                                <a href="https://github.com/thecorcoran/GreatBooks" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i> Live Demo</a> | <a href="https://github.com/thecorcoran/GreatBooks" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> GitHub Repo</a>
                             </div>
                         </div>
                     </li>
@@ -56,7 +56,7 @@
                             <h3>MiniBook</h3>
                             <p>A simple, responsive e-reader interface for displaying book content.</p>
                             <div class="project-links">
-                                <a href="https://thecorcoran.github.io/MiniBook/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i> Live Demo</a> | <a href="https://github.com/thecorcoran/MiniBook.git" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> GitHub Repo</a>
+                                <a href="https://github.com/thecorcoran/MiniBook.git" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i> Live Demo</a> | <a href="https://github.com/thecorcoran/MiniBook.git" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> GitHub Repo</a>
                             </div>
                         </div>
                     </li>
@@ -65,7 +65,7 @@
                             <h3>OnTheFrig</h3>
                             <p>A web application to manage your refrigerator contents and reduce food waste.</p>
                             <div class="project-links">
-                                <a href="https://thecorcoran.github.io/OnTheFrig/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i> Live Demo</a> | <a href="https://github.com/thecorcoran/OnTheFrig/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> GitHub Repo</a>
+                                <a href="https://github.com/thecorcoran/OnTheFrig/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i> Live Demo</a> | <a href="https://github.com/thecorcoran/OnTheFrig/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> GitHub Repo</a>
                             </div>
                         </div>
                     </li>
